syntax = "proto3";
import "aelf/core.proto";
import "aelf/options.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AElf.Contracts.CopyRightTokenContract";

service CopyRightTokenContract {

    option (aelf.csharp_state) = "AElf.Contracts.CopyRightTokenContract.CopyRightTokenContractState";

    rpc CRT_Create (CreateInput) returns (aelf.Hash) { }//生成CRT

    rpc CRT_Approve (ApproveInput) returns (aelf.SInt64Value) { }//授予操作权限

    rpc CRT_UnApprove(ApproveInput) returns (aelf.SInt64Value) { }//收回操作权限

    rpc CRT_ChangeOwner(TransferInput) returns (aelf.SInt64Value){ }//版权转让

    rpc CRT_Destory(aelf.Hash) returns (aelf.SInt64Value){ }//版权销毁

    rpc isApproved (ApproveInput) returns (google.protobuf.BoolValue) {//查看是否被授予操作权限
        option (aelf.is_view) = true;
    }

    rpc isAuthorized (AuthorizeInput) returns (google.protobuf.BoolValue) {//查看是否被授权
        option (aelf.is_view) = true;
    }

    rpc getAllInfo (aelf.Hash) returns (CRT_Info) {//查看存储信息
        option (aelf.is_view) = true;
    }
}

message CRT_Info {//版权资产证明
    aelf.Hash CRT_ID = 1;//只读，唯一标识，被用于标识对应版权。
    aelf.Address CRT_Creator = 2;//只读，地址，标识此Token所对应作品的创造者。
    aelf.Address CRT_Owner = 3;//地址，标识此Token财产权的所有者。
    string CRT_Content = 4;//只读，地址，指向该token对应作品数据所存储的链接位置。
    sint64 CRT_Status = 5;//状态属性，暂时包括正常、被质押和被销毁。
}

message CRT {//版权资产证明
    CRT_Info info = 1;//数据结构（下文所描述的），代表着CRT的基本信息
    repeated aelf.Address CRT_Authorized = 2;//地址数组，标识被授权使用该Token的全部用户（被许可人）。
    repeated aelf.Address CRT_Approved = 3;//地址数组，记录所有有权修改该CRT属性（除去只读属性）的用户（合约本身也需要Approve后才能操作属性）
    //aelf.Address CRT_Pledge_Info = 4;//地址，仅在CR_Status为被质押时有效。存储版权被质押信息的交易ID。
}

message CreateInput{
    aelf.Address CRT_Creator = 1;
    aelf.Address CRT_Owner = 2;
    string CRT_Content = 3;
    sint64 CRT_Status = 4;
}

message ApproveInput{
    aelf.Hash CRT_ID = 1;
    aelf.Address addr = 2;
}

message TransferInput{
    aelf.Hash CRT_ID = 1;
    aelf.Address addr = 2;
}

message AuthorizeInput{
    aelf.Hash CRT_ID = 1;
    aelf.Address addr = 2;
}