syntax = "proto3";
import "aelf/core.proto";
import "aelf/options.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AElf.Contracts.CRContract";

service CRContract {

    option (aelf.csharp_state) = "AElf.Contracts.CRContract.CRContractState";

    rpc CR_Register (aelf.Address) returns (aelf.SInt64Value) { }//用户注册

    rpc CR_Login(aelf.Address) returns (aelf.SInt64Value) { }//用户登录

    rpc CR_Upload (UploadData) returns (aelf.SInt64Value) { }//上传版权

    rpc CR_Transfer (TransferData) returns (aelf.SInt64Value) { }//交易版权

    rpc CR_Logout(aelf.Address) returns (aelf.SInt64Value){ }//用户登出

    rpc CR_Delete(aelf.Address) returns (aelf.SInt64Value){ }//用户注销

    rpc Get_User_Info(aelf.Address) returns (Identity){
        option (aelf.is_view) = true;
    }
}

// a custom message, used as the return type of the Hello action
message Identity {//身份信息数据结构
    aelf.Address Address = 1;//地址
    bool online = 2;
    //后续继续添加
}

message UploadData{
    aelf.Address CRT_Creator = 1;
    aelf.Address CRT_Owner = 2;
    string CRT_Content = 3;
    sint64 CRT_Status = 4;
}

message TransferData{
    aelf.Address addr = 1;
    aelf.Hash CRT_ID = 2;
    sint64 price = 3;
}